src/test/deca/syntax/invalid/declVar-instructionBeforeDeclaration.synt
declVar-instructionBeforeDeclaration.deca:3: